# introspection-scaling

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  README.md  RESULTS.md  SPEC.md  modal_app.py  pyproject.toml  reproduce.sh
.github/workflows/: ci.yml
docs/: Makefile  _moe_generalization_draft.md  arxiv-submission.md  k2_estimate.md  note.md  note.tex
docs/upstream/: repeng-pca-issue.md
results/: logit_lens_coder32b.json  logit_lens_coder32b_s.json  logit_lens_instruct32b.json  logit_lens_instruct32b_s.json  moe_fitcheck.json  records.jsonl  records_base14b_k2.jsonl  records_base32b_k2.jsonl  records_base7b_k2.jsonl  records_codellama34b_k2.jsonl  records_coder14b_k2.jsonl  records_coder32b.jsonl  records_coder32b_k2.jsonl  records_coder7b_k2.jsonl  records_deepseek33b_k2.jsonl  records_ladder_k2.jsonl  records_moe_k2.jsonl  rung_costs.csv  trials_base14b_k2_bedrock.jsonl  trials_base32b_k2.jsonl  trials_base32b_k2_bedrock.jsonl  trials_base7b_k2_bedrock.jsonl  trials_codellama34b_k2_bedrock.jsonl  trials_coder14b_k2_bedrock.jsonl  trials_coder32b_k2_bedrock.jsonl  trials_coder7b_k2_bedrock.jsonl  trials_deepseek33b_k2_bedrock.jsonl  trials_moe_k2_bedrock.jsonl
scripts/: base32b_k2_judge.py  coder32b_k2_judge.py  export_concept_vector.py  ladder_k2_judge.py  plot_trend_k2.py  positive_control.py  repeng_pca_repro.py  rung_k2_judge.py  smoke_injection.py  throughput_smoke.py  trend_table.py  verify_4bit_injection.py
src/introspection_scaling/: __init__.py  extract.py  harness.py  plot.py  records.py  report.py  runner.py  stats.py
tests/: conftest.py  test_extract.py  test_harness.py  test_records.py  test_report.py  test_runner.py  test_smoke.py  test_stats.py
