[project]
name = "introspection-scaling"
version = "0.0.1"
description = "Does concept-injection introspection emerge with scale? A faithful reproduction charted across model-size ladders."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Bamdad Dashtban" }]
dependencies = [
    "accelerate>=1.14.0",
    "anthropic>=0.45.0",
    "matplotlib>=3.9.0",
    "modal>=0.66.0",
    "numpy>=1.26.0,<2.0.0",
    "repeng>=0.4.0",
    "torch>=2.13.0",
    "transformers>=5.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/introspection_scaling"]

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.14", "mypy>=1.14", "pre-commit>=4"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
